--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,6 +24,7 @@
 <meta http-equiv="Content-Language" content="en-us">
 
 <title>New Page 1</title>
+<script src="jquery-1.11.2.min.js"></script>
 <script language="JavaScript">
 <!--
 function FP_swapImg() {//v1.0
