--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -377,15 +377,15 @@ document.write(date + ", " + year);
 </div>
 
 <style>
-  #part_counter_dialog {
+  #part_counter_dialog, #ft_part_counter_dialog {
     width: 275px;
   }
 
-  #part_counter {
+  #part_counter, #ft_part_counter {
     text-align: center;
   }
 
-  #part_count {
+  #part_count, #ft_part_count {
     font-size: 40px;
     margin-bottom: 20px;
     text-align: center;
